# UnconditionalOptimizationMethods

./: README.md
UnconditionalOptimizationMethods/: CMakeLists.txt
UnconditionalOptimizationMethods/src/: CoordinateDescent.cpp  CoordinateDescent.h  FletcherReeves.cpp  FletcherReeves.h  Functions.cpp  Functions.h  GradDesWithConstStep.cpp  GradDesWithConstStep.h  HukGivs.cpp  HukGivs.h  NelderMid.cpp  NelderMid.h  Newton.cpp  Newton.h  NewtonRaphson.cpp  NewtonRaphson.h  QuickGradDescent.cpp  QuickGradDescent.h  Simpleks.cpp  Simpleks.h  main.cpp
